--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,2 +1,10 @@
 project:
   type: website
+
+website:
+  navbar:
+    background: primary
+    search: true
+    left:
+      - text: "Home"
+        href: index.qmd
